<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">demo chat</string>
    <string name="VietNam">Việt Nam</string>
    <string name="Vietnamese">Tiếng Việt</string>
    <string name="English">English</string>
    <string name="password">Mật Khẩu</string>
    <string name="enter_phone_number">Nhập số điện thoại</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="enter_otp_s_t_y_phone_number">Nhập OTP đã được gửi đến số điện thoại của bạn</string>
    <string name="we_will_send_otp_to_you_on_this_mobile_number">Chúng tôi sẽ gửi một OTP đến cho bạn vào số điện thoại này</string>
    <string name="verify_phone_number">Xác minh số điện thoại</string>
    <string name="next">Tiếp</string>
    <string name="verification_otp">Xác minh OTP</string>
    <string name="resend_otp">GỬI LẠI OTP</string>
    <string name="didn_t_receive_the_otp">Không nhận được?</string>
    <string name="invalid_phone_number">Số điện thoại không hợp lệ</string>
    <string name="gach_chan">_</string>
    <string name="register_new_account">Đăng ký tài khoản mới</string>
    <string name="user_name">Tên người dùng</string>
    <string name="login">Đăng nhập</string>
    <string name="sign_up_for_an_account">Đăng ký tài khoản</string>
    <string name="forgot_password">Quên mật khẩu</string>
    <string name="enter_your_name">Nhập tên của bạn</string>
    <string name="profile_information">Thông tin hồ sơ</string>
    <string name="confirm">Xác nhận</string>
    <string name="seconds">giây</string>
    <string name="username_must_be_at_least_3_characters">Tên người dùng phải có ít nhất 3 ký tự</string>
    <string name="error_updating_profile">Lỗi khi cập nhật hồ sơ</string>
    <string name="error_no_phone_number">Lỗi không có số điện thoại</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="chat_screen">Trang trò chuyện</string>
    <string name="profile_screen">Profile Screen</string>
    <string name="search_button_desc">Tìm kiếm</string>
    <string name="search">Tìm kiếm</string>
    <string name="back_button_desc">Trở về</string>
    <string name="no_result">không có kết quả</string>
    <string name="verification_failed">Xác minh không thành công</string>
    <string name="error_cannot_resend_otp">Lỗi không thể gửi lại OTP</string>
    <string name="invalid_otp">OTP không hợp lệ</string>
    <string name="setting">Cài đặt</string>
    <string name="function">Chức năng</string>
    <string name="video_call">Gọi video</string>
    <string name="add_friends">Thêm bạn</string>
    <string name="chat">Trò chuyện</string>
    <string name="profile">Hồ sơ</string>
    <string name="this_is_last_message">Đây là tin nhắn cuối cùng</string>
    <string name="profile_updated">Hồ sơ đã cập nhật</string>
    <string name="your_profile_has_been_successfully_updated">Hồ sơ của bạn đã được cập nhật thành công.</string>
    <string name="user_not_found">User not found</string>
    <string name="failed_to_fetch_user_data">Không thể lấy dữ liệu người dùng</string>
    <string name="permission_required">Permission Required</string>
    <string name="this_app_requires_access_to_your_external_storage_to_function_properly_please_grant_the_permission">This app requires access to your external storage to function properly. Please grant the permission.</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="permission_denied">Permission denied</string>
    <string name="permission_granted">Permission granted</string>
    <string name="image_saved_successfully">Hình ảnh đã được lưu thành công</string>
    <string name="failed_to_save_image">Failed to save image</string>
    <string name="external_storage_is_not_available">External storage is not available</string>
    <string name="deny">Deny</string>
    <string name="error_setting_user_model">Lỗi khi thiết lập mô hình người dùng</string>
    <string name="me">(Me)</string>
    <string name="you">You</string>
    <string name="fire_store_error">Fire store error</string>
    <string name="no_results_found">No results found</string>
    <string name="failed_to_load_users">Failed to load users.</string>
    <string name="message">Tin nhắn</string>
    <string name="send">Gửi</string>
    <string name="hello_i_come_from_vietnam">Hello, I come from Vietnam</string>
    <string name="vietnam_is_wonderful">Vietnam is wonderful</string>
    <string name="update">Cập nhật</string>
    <string name="update_successful">Cập nhật thành công</string>
    <string name="update_failed">Cập nhật không thành công</string>
    <string name="logout">Đăng xuất</string>

</resources>
