<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/_30ssp"
            android:textStyle="bold"
            android:text="@string/profile_information"/>
        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/user_pro_file_pic"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_120sdp"
            android:layout_gravity="center"
            android:src="@drawable/icon_add"
            app:civ_border_width="1dp"
            app:civ_border_color="#FF000000"/>

        <EditText
            android:id="@+id/edt_your_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:hint="@string/enter_your_name"
            android:inputType="textPersonName"
            android:padding="@dimen/_10sdp"
            android:background="@drawable/edit_text_rounded_corner"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_18ssp" />

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/confirm"
            android:backgroundTint="@color/blue"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_14ssp"
            android:padding="@dimen/_10sdp" />
    </LinearLayout>
</ScrollView>
