<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".SearchActivity">
    <LinearLayout
        android:id="@+id/bar_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:gravity="center">
        <ImageButton
            android:id="@+id/back_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:backgroundTint="@android:color/transparent"
            android:src="@drawable/icon_back"
            android:contentDescription="@string/back_button_desc"/>
        <androidx.appcompat.widget.SearchView
            android:id="@+id/search_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:queryHint="@string/search"
            android:background="@drawable/edit_text_rounded_corner"
            app:iconifiedByDefault="false"
            app:queryBackground="@null"
            app:animateMenuItems="false"
            app:searchIcon="@drawable/icon_search"
            app:submitBackground="@null"/>
    </LinearLayout>
    <View
        android:id="@+id/diver"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/bar_search"
        android:background="@color/semi_transparent_black"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/diver"/>
    <TextView
        android:id="@+id/no_results_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/no_results_found"
        android:visibility="gone"
        android:layout_gravity="center"
        android:textSize="18sp" />
</RelativeLayout>
