<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:overScrollMode="never"
    android:fitsSystemWindows="true"
    android:padding="16dp"
    android:scrollbars="none"
    tools:context=".LoginPhoneNumberActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/phoneIcon"
            android:layout_width="0dp"
            android:layout_height="@dimen/_120sdp"
            android:layout_marginTop="@dimen/_35sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/phone_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/my_primary" />

        <TextView
            android:id="@+id/otpLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="@string/verification_otp"
            android:gravity="center"
            android:textColor="@color/my_primary"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phoneIcon" />

        <TextView
            android:id="@+id/otpNote"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/we_will_send_otp_to_you_on_this_mobile_number"
            android:gravity="center"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintTop_toBottomOf="@id/otpLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <LinearLayout
            android:id="@+id/inputOtpAndPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:padding="@dimen/_2sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/otpNote">

            <com.hbb20.CountryCodePicker
                android:id="@+id/countryCodePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:gravity="end"
                app:ccp_showFlag="false"
                app:ccp_showNameCode="false"
                app:ccp_textSize="@dimen/_14ssp"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/phoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@drawable/circular_bg"
                android:hint="@string/phone_number"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:padding="@dimen/_8sdp"
                android:textColor="@color/colorTextPrimary"
                android:textColorHint="@color/light_gray"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent" />
        </LinearLayout>


        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="@dimen/_2sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@color/light_gray"
            app:layout_constraintTop_toBottomOf="@id/inputOtpAndPhoneNumber"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/nextButtonPhone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:layout_marginTop="@dimen/_18sdp"
            android:textSize="@dimen/_15ssp"
            android:padding="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Spinner
            android:id="@+id/languageSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:focusable="true"
            android:padding="@dimen/_10sdp"
            android:spinnerMode="dropdown"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nextButtonPhone" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
