<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ChatActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:src="@drawable/icon_back"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/back_button_desc"/>
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_pic_image"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:src="@drawable/icon_person"/>
        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="User name"
            android:layout_marginStart="@dimen/_10sdp"
            android:textStyle="bold"
            android:textSize="@dimen/_18ssp"/>
    </androidx.appcompat.widget.Toolbar>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/message_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:background="@color/semi_transparent_black"
        android:layout_above="@id/layout_bottom"/>
    <RelativeLayout
        android:id="@+id/layout_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_5sdp"
        android:layout_alignParentBottom="true">
        <EditText
            android:id="@+id/edt_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/message"
            android:padding="@dimen/_5sdp"
            android:textSize="@dimen/_15ssp"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/btn_send_message"
            android:layout_centerInParent="true"/>
        <ImageButton
            android:id="@+id/btn_send_message"
            android:layout_width="@dimen/_42sdp"
            android:layout_height="@dimen/_42sdp"
            android:src="@drawable/icon_send"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            app:tint="@color/my_primary"
            android:visibility="visible"
            android:contentDescription="@string/send"
            android:background="?attr/selectableItemBackgroundBorderless"/>
    </RelativeLayout>
</RelativeLayout>